@@ -2,7 +2,8 @@ ChangeLog for pommed
 --------------------
 
 version 1.4:
-
+	- pommed: add Geyser keyboard identification, PowerBook5,8 (at
+	least) and later.
 
 version 1.3:
 	- gpomme: added configuration GUI, courtesy of Daniel G. SIEGEL.
